cmake_minimum_required(VERSION 3.22)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCode main.cpp Two_Sum.cpp Two_Sum.h "Monk and Rotation.h" MonkandInversions.h JamesandtheMenus.h CF_GR_21_A.h _121BestTimetoBuyandSellStock.cpp _121BestTimetoBuyandSellStock.h 136_Single_Number.h "167._Two_Sum_IIInput Array Is Sorted.h")
